# kontor

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
src/kontor/: __init__.py  cli.py
