[project]
name = "kontor"
version = "0.0.0.dev0"
description = "Manages your home directory."
readme = "README.md"
authors = [{ name = "Jesse Stricker" }]
requires-python = ">=3.14"
dependencies = ["click>=8.3.1", "dacite>=1.9.2"]

[project.scripts]
kontor = "kontor.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.14.10"]

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["COM812", "D"]
